// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get options default options 1`] = `
{
  "cssMatcher": [Function],
  "cssPreflight": {
    "border-color": "currentColor",
    "border-style": "solid",
    "border-width": "0",
    "box-sizing": "border-box",
  },
  "cssPreflightRange": "view",
  "customAttributes": {},
  "customReplaceDictionary": {
    "!": "i",
    """: "x",
    "#": "h",
    "$": "r",
    "%": "p",
    "&": "n",
    "'": "q",
    "(": "_",
    ")": "_",
    "*": "m",
    "+": "a",
    ",": "b",
    ".": "d",
    "/": "s",
    ":": "c",
    ";": "f",
    "<": "l",
    "=": "e",
    ">": "g",
    "?": "o",
    "@": "j",
    "[": "_",
    "\\": "w",
    "]": "_",
    "^": "k",
    "\`": "v",
    "{": "_",
    "|": "u",
    "}": "_",
    "~": "t",
  },
  "customRuleCallback": [Function],
  "disabled": false,
  "escapeEntries": [
    [
      "[",
      "_",
    ],
    [
      "]",
      "_",
    ],
    [
      "(",
      "_",
    ],
    [
      ")",
      "_",
    ],
    [
      "{",
      "_",
    ],
    [
      "}",
      "_",
    ],
    [
      "+",
      "a",
    ],
    [
      ",",
      "b",
    ],
    [
      ":",
      "c",
    ],
    [
      ".",
      "d",
    ],
    [
      "=",
      "e",
    ],
    [
      ";",
      "f",
    ],
    [
      ">",
      "g",
    ],
    [
      "#",
      "h",
    ],
    [
      "!",
      "i",
    ],
    [
      "@",
      "j",
    ],
    [
      "^",
      "k",
    ],
    [
      "<",
      "l",
    ],
    [
      "*",
      "m",
    ],
    [
      "&",
      "n",
    ],
    [
      "?",
      "o",
    ],
    [
      "%",
      "p",
    ],
    [
      "'",
      "q",
    ],
    [
      "$",
      "r",
    ],
    [
      "/",
      "s",
    ],
    [
      "~",
      "t",
    ],
    [
      "|",
      "u",
    ],
    [
      "\`",
      "v",
    ],
    [
      "\\",
      "w",
    ],
    [
      """,
      "x",
    ],
  ],
  "framework": "react",
  "htmlMatcher": [Function],
  "jsHandler": [Function],
  "jsMatcher": [Function],
  "jsxHandler": [Function],
  "jsxRenameLoaderPath": "",
  "loaderOptions": {
    "jsxRename": false,
  },
  "mainCssChunkMatcher": [Function],
  "mangle": false,
  "minifiedJs": false,
  "onEnd": [Function],
  "onLoad": [Function],
  "onStart": [Function],
  "onUpdate": [Function],
  "patch": [Function],
  "replaceUniversalSelectorWith": "view",
  "styleHandler": [Function],
  "supportCustomLengthUnitsPatch": {
    "dangerousOptions": {
      "gteVersion": "3.0.0",
      "lengthUnitsFilePath": "lib/util/dataTypes.js",
      "overwrite": true,
      "packageName": "tailwindcss",
      "variableName": "lengthUnits",
    },
    "units": [
      "rpx",
    ],
  },
  "templeteHandler": [Function],
}
`;

exports[`get options vue framework 1`] = `
{
  "cssMatcher": [Function],
  "cssPreflight": {
    "border-color": "currentColor",
    "border-style": "solid",
    "border-width": "0",
    "box-sizing": "border-box",
  },
  "cssPreflightRange": "view",
  "customAttributes": {},
  "customReplaceDictionary": {
    "!": "i",
    """: "x",
    "#": "h",
    "$": "r",
    "%": "p",
    "&": "n",
    "'": "q",
    "(": "_",
    ")": "_",
    "*": "m",
    "+": "a",
    ",": "b",
    ".": "d",
    "/": "s",
    ":": "c",
    ";": "f",
    "<": "l",
    "=": "e",
    ">": "g",
    "?": "o",
    "@": "j",
    "[": "_",
    "\\": "w",
    "]": "_",
    "^": "k",
    "\`": "v",
    "{": "_",
    "|": "u",
    "}": "_",
    "~": "t",
  },
  "customRuleCallback": [Function],
  "disabled": false,
  "escapeEntries": [
    [
      "[",
      "_",
    ],
    [
      "]",
      "_",
    ],
    [
      "(",
      "_",
    ],
    [
      ")",
      "_",
    ],
    [
      "{",
      "_",
    ],
    [
      "}",
      "_",
    ],
    [
      "+",
      "a",
    ],
    [
      ",",
      "b",
    ],
    [
      ":",
      "c",
    ],
    [
      ".",
      "d",
    ],
    [
      "=",
      "e",
    ],
    [
      ";",
      "f",
    ],
    [
      ">",
      "g",
    ],
    [
      "#",
      "h",
    ],
    [
      "!",
      "i",
    ],
    [
      "@",
      "j",
    ],
    [
      "^",
      "k",
    ],
    [
      "<",
      "l",
    ],
    [
      "*",
      "m",
    ],
    [
      "&",
      "n",
    ],
    [
      "?",
      "o",
    ],
    [
      "%",
      "p",
    ],
    [
      "'",
      "q",
    ],
    [
      "$",
      "r",
    ],
    [
      "/",
      "s",
    ],
    [
      "~",
      "t",
    ],
    [
      "|",
      "u",
    ],
    [
      "\`",
      "v",
    ],
    [
      "\\",
      "w",
    ],
    [
      """,
      "x",
    ],
  ],
  "framework": "vue2",
  "htmlMatcher": [Function],
  "jsHandler": [Function],
  "jsMatcher": [Function],
  "jsxHandler": [Function],
  "jsxRenameLoaderPath": "",
  "loaderOptions": {
    "jsxRename": false,
  },
  "mainCssChunkMatcher": [Function],
  "mangle": false,
  "minifiedJs": false,
  "onEnd": [Function],
  "onLoad": [Function],
  "onStart": [Function],
  "onUpdate": [Function],
  "patch": [Function],
  "replaceUniversalSelectorWith": "view",
  "styleHandler": [Function],
  "supportCustomLengthUnitsPatch": {
    "dangerousOptions": {
      "gteVersion": "3.0.0",
      "lengthUnitsFilePath": "lib/util/dataTypes.js",
      "overwrite": true,
      "packageName": "tailwindcss",
      "variableName": "lengthUnits",
    },
    "units": [
      "rpx",
    ],
  },
  "templeteHandler": [Function],
}
`;
